examples/negative/pipes/pipe_wrong_signature/badbox.kai
# Issue #594 — module declares `pub type Box` and a `pub fn map`,
# but `map`'s argument order is INVERTED ((f, b) instead of the
# canonical (b, f)). The pipe's expected shape is `(Box[a], (a) ->
# b) -> Box[b]`; this `map`'s shape is `((a) -> b, Box[a]) -> Box[b]`.
# The dispatch path resolves `Box → badbox` cleanly, but the
# call-inference unify fails — the user sees the standard "type
# mismatch in function call" diagnostic, NOT a confusing "no
# dispatch" cascade.

pub type Box[t] = MkBox(t)

pub fn map[a, b, e](f: (a) -> b / e, b: Box[a]) : Box[b] / e {
  match b {
    MkBox(v) -> MkBox(f(v))
  }
}
